# dxproxy

./: .editorconfig  .typos.toml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/common/: com_mapping_tracker.rs  mod.rs  try_out_param.rs
core/src/dx9/: config.rs  dll.rs  mod.rs
core/src/dx9/com/: device_context.rs  idirect3d9.rs  idirect3d9ex.rs  idirect3dcubetexture9.rs  idirect3ddevice9.rs  idirect3ddevice9ex.rs  idirect3dindexbuffer9.rs  idirect3dpixelshader9.rs  idirect3dquery9.rs  idirect3dstateblock9.rs  idirect3dsurface9.rs  idirect3dswapchain9.rs  idirect3dswapchain9ex.rs  idirect3dtexture9.rs  idirect3dvertexbuffer9.rs  idirect3dvertexdeclaration9.rs  idirect3dvertexshader9.rs  idirect3dvolume9.rs  idirect3dvolumetexture9.rs  mod.rs
core/src/dx9/tests/: mod.rs
core/src/tests/: README.md  mod.rs
entrypoints/d3d9/: Cargo.toml  build.rs  d3d9.def  d3d9.rc
entrypoints/d3d9/src/: lib.rs
