[package]
name = "dxproxy"
version.workspace = true
edition.workspace = true

[features]
default = ["tracing", "tracing-instrument"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
tracing-instrument = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
tracing = { version = "0.1", features = [
    "attributes",
    "log",
], default-features = false, optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
], default-features = false, optional = true }
windows-core = "0.61"
windows-numerics = "0.2"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
